--- a/admin/css/member-images-style.css
+++ b/admin/css/member-images-style.css
@@ -6,7 +6,7 @@
  * Path: admin/css/member-images-style.css
  * 
  * Changelog:
- * 2.1.0 - 2024-11-19
+ * 2.1.0 - 2024-11-19 12:10:05
  * - Added card styles from admin-edit-member-images.php
  * - Added image grid layout
  * - Improved form and button styles
